--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "author": "Jan Jongboom <janjongboom@gmail.com>",
   "homepage": "https://github.com/janjongboom/meetingroom-web",
   "dependencies": {
+    "body-parser": "^1.13.2",
     "dirty": "^0.9.9",
     "express": "^4.13.1",
     "express-session": "^1.11.3",
+    "google-calendar": "^1.3.2",
+    "mu2": "^0.5.20",
     "passport": "^0.2.2",
     "passport-google-oauth2": "^0.1.6",
     "session-file-store": "0.0.16"
