--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mu2": "^0.5.20",
     "passport": "^0.2.2",
     "passport-google-oauth2": "^0.1.6",
+    "request": "^2.60.0",
     "session-file-store": "0.0.16"
   }
 }
